@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Force the test modules from previous change to be included
+      as pre-requisites.
 
 0.19      2015-03-08 12:23:48+00:00 Europe/London
     - Fix up deprecated test modules - see 
